--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 permalink: /:year/:month/:title/
-exclude:  server.sh, Gemfile, Gemfile.lock README.md
-name: My Name
-description: Blog Description
-url: http://example.com
-email: me@gmail.com (My Name)
-title: Blog Title
-subtitle: Blog Subtitle
-only_first_p:
-    show_read_more_link: false
-    read_more_link_text: 'Read more'
+exclude:  README.md
+name: Nicholas Kraak
+description: The Big Shift Film Website
+url: http://thebigshift.github.io
+email: thebigshiftfilm@gmail.com (The Big Shift Film)
+title: The Big Shift
+subtitle: The Noir that becomes a Western
